@@ -4,12 +4,18 @@ import com.soict.CodeArena.model.Problem;
 import com.soict.CodeArena.model.User;
 import com.soict.CodeArena.model.UserProblemStat;
 import com.soict.CodeArena.repository.ProblemRepository;
+import com.soict.CodeArena.repository.UserProblemStatRepository;
 import com.soict.CodeArena.request.ProblemRequest;
 import com.soict.CodeArena.response.DefaultProblemResponse;
+import com.soict.CodeArena.response.PagedResponse;
 import com.soict.CodeArena.response.ProblemItemResponse;
 import com.soict.CodeArena.response.ProblemDetailResponse;
 import com.soict.CodeArena.service.ProblemService;
 import com.soict.CodeArena.service.UserService;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
@@ -24,10 +30,13 @@ public class ProblemServiceImpl implements ProblemService {
 
     private final ProblemRepository problemRepository;
     private final UserService userService;
+    private final UserProblemStatRepository userProblemStatRepository;
 
-    public ProblemServiceImpl(ProblemRepository problemRepository,  UserService userService) {
+    public ProblemServiceImpl(ProblemRepository problemRepository, UserService userService,
+            UserProblemStatRepository userProblemStatRepository) {
         this.problemRepository = problemRepository;
         this.userService = userService;
+        this.userProblemStatRepository = userProblemStatRepository;
     }
 
     @Override
@@ -61,11 +70,11 @@ public class ProblemServiceImpl implements ProblemService {
 
     @Override
     @PreAuthorize("hasAnyAuthority('ADMIN', 'MANAGER')")
-    public ProblemDetailResponse updateProblem(Long problemId, ProblemRequest request, String username) throws Exception {
+    public ProblemDetailResponse updateProblem(Long problemId, ProblemRequest request, String username)
+            throws Exception {
         Problem problem = problemRepository.findById(problemId)
                 .orElseThrow(() -> new ResponseStatusException(
-                        HttpStatus.NOT_FOUND, "Problem Not Found"
-                ));
+                        HttpStatus.NOT_FOUND, "Problem Not Found"));
 
         if (!problem.getCreatedBy().getUserId()
                 .equals(userService.findByUsername(username).getUserId())) {
@@ -93,8 +102,7 @@ public class ProblemServiceImpl implements ProblemService {
     public ProblemDetailResponse activeProblem(Long problemId, String username) throws Exception {
         Problem problem = problemRepository.findById(problemId)
                 .orElseThrow(() -> new ResponseStatusException(
-                        HttpStatus.NOT_FOUND, "Problem Not Found"
-                ));
+                        HttpStatus.NOT_FOUND, "Problem Not Found"));
 
         if (!problem.getCreatedBy().getUserId()
                 .equals(userService.findByUsername(username).getUserId())) {
@@ -106,13 +114,11 @@ public class ProblemServiceImpl implements ProblemService {
         return convertToResponse(updatedProblem);
     }
 
-
     @Override
     public ProblemDetailResponse getProblemById(Long problemId) {
         Problem problem = problemRepository.findById(problemId)
                 .orElseThrow(() -> new ResponseStatusException(
-                        HttpStatus.NOT_FOUND, "Problem Not Found"
-                ));
+                        HttpStatus.NOT_FOUND, "Problem Not Found"));
         return convertToResponse(problem);
     }
 
@@ -120,38 +126,83 @@ public class ProblemServiceImpl implements ProblemService {
     public ProblemDetailResponse getProblemByCode(String problemCode) {
         Problem problem = problemRepository.findByProblemCode(problemCode)
                 .orElseThrow(() -> new ResponseStatusException(
-                        HttpStatus.NOT_FOUND, "Problem Not Found"
-                ));
+                        HttpStatus.NOT_FOUND, "Problem Not Found"));
         return convertToResponse(problem);
     }
 
     @Override
     @PreAuthorize("hasAnyAuthority('ADMIN', 'MANAGER')")
-    public List<DefaultProblemResponse> getMyProblems(String username) throws Exception {
-        User user  = userService.findByUsername(username);
+    public PagedResponse<DefaultProblemResponse> getMyProblems(String username, Integer page, Integer pageSize,
+            Integer offset) throws Exception {
+        User user = userService.findByUsername(username);
         if (user == null) {
             throw new IllegalStateException("Authenticated user not found");
         }
 
-        return problemRepository.findAllByCreatedBy(user).stream()
+        int actualPageSize = (pageSize != null && pageSize > 0) ? pageSize : 10;
+        int actualPage;
+
+        if (offset != null && offset >= 0) {
+            actualPage = offset / actualPageSize;
+        } else if (page != null && page >= 0) {
+            actualPage = page;
+        } else {
+            actualPage = 0;
+        }
+
+        Pageable pageable = PageRequest.of(actualPage, actualPageSize, Sort.by("createdDate").descending());
+        Page<Problem> problemPage = problemRepository.findAllByCreatedBy(user, pageable);
+
+        List<DefaultProblemResponse> responses = problemPage.getContent().stream()
                 .map(this::convertToDefaultResponse)
                 .collect(Collectors.toList());
+
+        return new PagedResponse<>(
+                responses,
+                problemPage.getNumber(),
+                problemPage.getSize(),
+                problemPage.getTotalElements(),
+                problemPage.getTotalPages(),
+                problemPage.isLast(),
+                problemPage.isFirst());
     }
 
     @Override
-    public List<ProblemItemResponse> getActiveProblems(String username) throws Exception {
-
+    public PagedResponse<ProblemItemResponse> getActiveProblems(String username, Integer page, Integer pageSize,
+            Integer offset) throws Exception {
         User user = userService.findByUsername(username);
 
-        List<Object[]> rows =
-                problemRepository.findActiveProblemsWithUserStat(user);
+        int actualPageSize = (pageSize != null && pageSize > 0) ? pageSize : 10;
+        int actualPage;
 
-        return rows.stream().map(row -> {
-            Problem problem = (Problem) row[0];
-            UserProblemStat stat = (UserProblemStat) row[1];
+        if (offset != null && offset >= 0) {
+            actualPage = offset / actualPageSize;
+        } else if (page != null && page >= 0) {
+            actualPage = page;
+        } else {
+            actualPage = 0;
+        }
 
-            return convertToItemResponse(problem, stat);
-        }).toList();
+        Pageable pageable = PageRequest.of(actualPage, actualPageSize, Sort.by("createdDate").descending());
+        Page<Problem> problemPage = problemRepository.findActiveProblemsPageable(pageable);
+
+        List<ProblemItemResponse> responses = problemPage.getContent().stream()
+                .map(problem -> {
+                    UserProblemStat stat = userProblemStatRepository
+                            .findByUserAndProblem(user, problem)
+                            .orElse(null);
+                    return convertToItemResponse(problem, stat);
+                })
+                .collect(Collectors.toList());
+
+        return new PagedResponse<>(
+                responses,
+                problemPage.getNumber(),
+                problemPage.getSize(),
+                problemPage.getTotalElements(),
+                problemPage.getTotalPages(),
+                problemPage.isLast(),
+                problemPage.isFirst());
     }
 
     @Override
@@ -159,8 +210,7 @@ public class ProblemServiceImpl implements ProblemService {
     public void deleteProblem(Long problemId, String username) throws Exception {
         Problem problem = problemRepository.findById(problemId)
                 .orElseThrow(() -> new ResponseStatusException(
-                        HttpStatus.NOT_FOUND, "Problem Not Found"
-                ));
+                        HttpStatus.NOT_FOUND, "Problem Not Found"));
 
         if (!problem.getCreatedBy().getUserId()
                 .equals(userService.findByUsername(username).getUserId())) {
